--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/banban.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,11 +32,12 @@ current_scene="res://scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/player.gd"]
+selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
