--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/banban.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/fonts/font.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
