--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -21,7 +21,7 @@ scripts=["res://assets/fonts/monogram-bitmap.json", "res://scripts/player.gd"]
 
 [dialog_bounds]
 
-project_settings=Rect2(510, 190, 900, 700)
+project_settings=Rect2(319, 1659, 1417, 669)
 create_new_node=Rect2(510, 190, 900, 700)
 
 [script_setup]
@@ -34,4 +34,4 @@ advanced_mode=true
 
 [color_picker]
 
-recent_presets=PackedColorArray(0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1)
+recent_presets=PackedColorArray(0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0.481789, 0.481789, 0.481789, 1, 0.489622, 0.489622, 0.489622, 1)
