--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/fonts/font.png")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/level select.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn")
-current_scene="res://scenes/main.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/title.tscn", "res://scenes/level select.tscn", "res://scenes/transition.tscn")
+current_scene="res://scenes/transition.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player.gd"]
-selected_script="res://scripts/player.gd"
+open_scripts=["res://scripts/player.gd", "res://scripts/title.gd", "res://scripts/transition.gd"]
+selected_script="res://scripts/transition.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
