--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=127
+dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/level select.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://3dtest.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/title.tscn", "res://scenes/level select.tscn", "res://scenes/transition.tscn")
-current_scene="res://scenes/transition.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/title.tscn", "res://3dtest.tscn")
+current_scene="res://3dtest.tscn"
+center_split_offset=-175
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/player.gd", "res://scripts/title.gd", "res://scripts/transition.gd"]
-selected_script="res://scripts/transition.gd"
+selected_script="res://scripts/title.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
