--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/level select.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/fonts/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/title.tscn", "res://scenes/level select.tscn", "res://scenes/transition.tscn")
-current_scene="res://scenes/transition.tscn"
+open_scenes=PackedStringArray("res://scenes/title.tscn", "res://scenes/level select.tscn", "res://scenes/transition.tscn")
+current_scene="res://scenes/title.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player.gd", "res://scripts/title.gd", "res://scripts/transition.gd"]
-selected_script="res://scripts/transition.gd"
+open_scripts=["res://scripts/Input.gd", "res://scripts/player.gd", "res://scripts/title.gd", "res://scripts/transition.gd"]
+selected_script="res://scripts/title.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
